--- a/la5ªgeneracióndelaaviación/Portada.html
+++ b/la5ªgeneracióndelaaviación/Portada.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <div class="w3-col l8 s12">
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="imagenes/caracteristico-perfil-22-cabina-dorada_98.webp" alt="Avión de combate" style="width:100%">
+    <img src="imagenes/F-22-Raptor-top-scaled.jpg" alt="Avión de combate" style="width:100%">
     <div class="w3-container">
       <h3><b>Aviones de Combate Modernos</b></h3>
       <h5>Características y tecnología avanzada, <span class="w3-opacity">6 de junio, 2025</span></h5>
