--- a/la5ªgeneracióndelaaviación/Portada.html
+++ b/la5ªgeneracióndelaaviación/Portada.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>La 5ª generación de la aviación</b></h1>
-  <p>Bienvenido al blog de <span class="w3-tag">Juan Pérez</span></p>
+  <p>Te damos la bienbenida al mundo de la <span class="w3-tag">aviación</span></p>
 </header>
 
 <div class="w3-row">
