--- a/la5ªgeneracióndelaaviación/Portada.html
+++ b/la5ªgeneracióndelaaviación/Portada.html
@@ -7,106 +7,28 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('https://via.placeholder.com/1400x800'); /* Imagen de aviación */
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
 </style>
 </head>
-<body class="w3-light-grey">
+<body>
 
-<div class="w3-content" style="max-width:1400px">
-
-<header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>La 5ª generación de la aviación</b></h1>
-  <p>Te damos la bienbenida al mundo de la <span class="w3-tag">aviación</span></p>
-</header>
-
-<div class="w3-row">
-
-<div class="w3-col l8 s12">
-  <div class="w3-card-4 w3-margin w3-white">
-    <img src="https://via.placeholder.com/1400x400" alt="Avión de combate" style="width:100%">
-    <div class="w3-container">
-      <h3><b>Aviones de Combate Modernos</b></h3>
-      <h5>Características y tecnología avanzada, <span class="w3-opacity">6 de junio, 2025</span></h5>
-    </div>
-
-    <div class="w3-container">
-      <p>Explora la evolución de los aviones de combate y descubre las características que hacen única a la quinta generación de aeronaves.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>LEER MÁS »</b></button></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comentarios  </b> <span class="w3-tag">5</span></span></p>
-        </div>
-      </div>
-    </div>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    La 5ª generación de la aviación
   </div>
-  <hr>
-
-  <div class="w3-card-4 w3-margin w3-white">
-  <img src="https://via.placeholder.com/1400x400" alt="Tecnología furtiva" style="width:100%">
-    <div class="w3-container">
-      <h3><b>La tecnología furtiva</b></h3>
-      <h5>Innovaciones en combate aéreo, <span class="w3-opacity">4 de junio, 2025</span></h5>
-    </div>
-
-    <div class="w3-container">
-      <p>Descubre cómo la tecnología de baja visibilidad ha cambiado la estrategia en combate aéreo y cuáles son los aviones que lideran esta evolución.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>LEER MÁS »</b></button></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comentarios  </b> <span class="w3-badge">3</span></span></p>
-        </div>
-      </div>
-    </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">DESCUBRE EL FUTURO</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center">Innovación y tecnología en el combate aéreo</p>
   </div>
-</div>
-
-<div class="w3-col l4">
-  <div class="w3-card w3-margin w3-margin-top">
-  <img src="https://via.placeholder.com/200x200" style="width:100%">
-    <div class="w3-container w3-white">
-      <h4><b>Juan Pérez</b></h4>
-      <p>Apasionado por la aviación y la tecnología aeronáutica. Explorador de las innovaciones en el mundo de los aviones de combate.</p>
-    </div>
-  </div><hr>
-  
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>Posts Populares</h4>
-    </div>
-    <ul class="w3-ul w3-hoverable w3-white">
-      <li class="w3-padding-16">
-        <img src="https://via.placeholder.com/50" alt="Imagen" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Historia de la aviación</span><br>
-        <span>Desde los primeros vuelos hasta hoy</span>
-      </li>
-      <li class="w3-padding-16">
-        <img src="https://via.placeholder.com/50" alt="Imagen" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Aviones furtivos</span><br>
-        <span>El futuro del combate aéreo</span>
-      </li> 
-    </ul>
-  </div>
-  <hr> 
-
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>Etiquetas</h4>
-    </div>
-    <div class="w3-container w3-white">
-    <p><span class="w3-tag w3-black w3-margin-bottom">Aviación</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Tecnología furtiva</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Aviones de combate</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Innovación</span>
-    </p>
-    </div>
-  </div>
-  
-</div>
-
-<div class="w3-row">
-  <div class="w3-col m8 s12">
+  <div class="w3-display-bottomleft w3-padding-large">
     <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-22 »</b></button></p>
     <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-35 »</b></button></p>
     <p><button class="w3-button w3-padding-large w3-white w3-border"><b>SU-57 »</b></button></p>
@@ -115,12 +37,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Eurofighter Typhoon »</b></button></p>
   </div>
 </div>
-
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Anterior</button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Siguiente »</button>
-  <p>Inspirado por <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
 
 </body>
 </html>
