--- a/la5ªgeneracióndelaaviación/Portada.html
+++ b/la5ªgeneracióndelaaviación/Portada.html
@@ -23,18 +23,22 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     La 5ª generación de la aviación
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">DESCUBRE EL FUTURO</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Innovación y tecnología en el combate aéreo</p>
+  
+  <div class="w3-display-middle w3-center">
+    <img src="https://via.placeholder.com/800x400" alt="Avión de combate de quinta generación" style="width:100%; max-width:800px;">
+    
+    <div class="w3-margin-top">
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-22 »</b></button></p>
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-35 »</b></button></p>
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>SU-57 »</b></button></p>
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>J-20 »</b></button></p>
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Rafale »</b></button></p>
+      <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Eurofighter Typhoon »</b></button></p>
+    </div>
   </div>
+  
   <div class="w3-display-bottomleft w3-padding-large">
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-22 »</b></button></p>
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>F-35 »</b></button></p>
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>SU-57 »</b></button></p>
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>J-20 »</b></button></p>
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Rafale »</b></button></p>
-    <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Eurofighter Typhoon »</b></button></p>
+    <p>Inspirado por <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </div>
 </div>
 
