--- a/la5ªgeneracióndelaaviación/Portada.html
+++ b/la5ªgeneracióndelaaviación/Portada.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('military-jets-qgddamh686ip2top.jpg'); /* Imagen de fondo */
+  background-image: hrc='imagenes/military-jets-qgddamh686ip2top.jpg'); /* Imagen de fondo */
   min-height: 100%;
   background-position: center;
   background-size: cover;
