--- a/la5ªgeneracióndelaaviación/Portada1.html
+++ b/la5ªgeneracióndelaaviación/Portada1.html
@@ -15,7 +15,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=1350&q=80");
+  background-image: url("military-jets-qgddamh686ip2top.jpg");
   min-height: 75%;
   filter: grayscale(20%);
 }
@@ -66,23 +66,19 @@ body, html {
   <div class="w3-container" id="generacion5">
     <div class="w3-content" style="max-width:900px">
       <h3 class="w3-center w3-padding-32"><span class="w3-tag w3-wide">Generación 5</span></h3>
-      
-      <!-- F-22 -->
+
       <h4>F-22 Raptor</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/F-22_Raptor_in_flight_edit2.jpg/800px-F-22_Raptor_in_flight_edit2.jpg" alt="F-22 Raptor" class="aircraft-img">
       <p>El F-22 es un caza furtivo estadounidense de superioridad aérea, con capacidades avanzadas en sigilo, velocidad y maniobrabilidad.</p>
-      
-      <!-- F-35 -->
+
       <h4>F-35 Lightning II</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/F-35B_Landing_on_USS_Wasp_%28cropped%29.jpg/800px-F-35B_Landing_on_USS_Wasp_%28cropped%29.jpg" alt="F-35 Lightning II" class="aircraft-img">
       <p>El F-35 es un caza multirrol furtivo con tecnologías avanzadas de sensores y capacidad para operar en distintos escenarios.</p>
 
-      <!-- SU-57 -->
       <h4>Su-57 Felon</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Sukhoi_Su-57_%28cropped%29.jpg/800px-Sukhoi_Su-57_%28cropped%29.jpg" alt="Su-57" class="aircraft-img">
       <p>El Su-57 es el caza furtivo ruso de quinta generación diseñado para misiones aire-aire y aire-tierra con alta maniobrabilidad y sigilo.</p>
 
-      <!-- J-20 -->
       <h4>Chengdu J-20</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Chengdu_J-20_Mighty_Dragon_in_flight_1.jpg/800px-Chengdu_J-20_Mighty_Dragon_in_flight_1.jpg" alt="J-20" class="aircraft-img">
       <p>El J-20 es el caza furtivo chino de quinta generación, con énfasis en sigilo, velocidad y armamento avanzado.</p>
@@ -96,17 +92,14 @@ body, html {
     <div class="w3-content" style="max-width:900px">
       <h3 class="w3-center w3-padding-32"><span class="w3-tag w3-wide">Generación 4.5</span></h3>
 
-      <!-- Eurofighter Typhoon -->
       <h4>Eurofighter Typhoon</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Eurofighter_Typhoon_in_flight_edit2.jpg/800px-Eurofighter_Typhoon_in_flight_edit2.jpg" alt="Eurofighter Typhoon" class="aircraft-img">
       <p>El Eurofighter es un caza europeo de cuarta generación avanzada que combina gran maniobrabilidad con capacidades multirrol y electrónica avanzada.</p>
 
-      <!-- Dassault Rafale -->
       <h4>Dassault Rafale</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Dassault_Rafale_Marine_3.jpg/800px-Dassault_Rafale_Marine_3.jpg" alt="Dassault Rafale" class="aircraft-img">
       <p>El Rafale francés es un avión polivalente capaz de operar en diferentes misiones, destacando su aviónica y adaptabilidad.</p>
 
-      <!-- Boeing F/A-18E/F Super Hornet -->
       <h4>Boeing F/A-18E/F Super Hornet</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/F18F_superhornet_cvn71_170909-N-TX016-010.jpg/800px-F18F_superhornet_cvn71_170909-N-TX016-010.jpg" alt="F/A-18E/F Super Hornet" class="aircraft-img">
       <p>El Super Hornet estadounidense es un caza multirrol de generación 4.5, reconocido por su fiabilidad y flexibilidad en combate.</p>
@@ -122,5 +115,3 @@ body, html {
 
 </body>
 </html>
-
-
