--- a/la5ªgeneracióndelaaviación/Portada1.html
+++ b/la5ªgeneracióndelaaviación/Portada1.html
@@ -11,6 +11,15 @@ body, html {
   height: 100%;
   font-family: "Inconsolata", monospace;
 }
+<style>
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("military-jets-qgddamh686ip2top.jpg");
+  min-height: 75%;
+  filter: grayscale(20%);
+}
+</style>
 
 .bgimg {
   background-position: center;
