--- a/la5ªgeneracióndelaaviación/Portada1.html
+++ b/la5ªgeneracióndelaaviación/Portada1.html
@@ -1,43 +1,36 @@
-<!DOCTYPE html>
-<html>
 <head>
-<title>Aviones de 5ª y 4.5 generación</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-<style>
-body, html {
-  height: 100%;
-  font-family: "Inconsolata", monospace;
-}
-<style>
-.bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url("military-jets-qgddamh686ip2top.jpg");
-  min-height: 75%;
-  filter: grayscale(20%);
-}
-</style>
+  <title>Aviones de 5ª y 4.5 generación</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+  <style>
+    body, html {
+      height: 100%;
+      font-family: "Inconsolata", monospace;
+    }
 
-.bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url("military-jets-qgddamh686ip2top.jpg");
-  min-height: 75%;
-  filter: grayscale(20%);
-}
+    .bgimg {
+      background-position: center;
+      background-size: cover;
+      background-image: url("military-jets-qgddamh686ip2top.jpg");
+      min-height: 75%;
+      filter: grayscale(20%);
+    }
 
-.menu {
-  display: none;
-}
+    .menu {
+      display: none;
+    }
 
-.aircraft-img {
-  width: 100%;
-  max-width: 700px;
-  border-radius: 8px;
-  margin-top: 20px;
+    .aircraft-img {
+      width: 100%;
+      max-width: 700px;
+      border-radius: 8px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+
 }
 </style>
 </head>
