--- a/la5ªgeneracióndelaaviación/Portada1.html
+++ b/la5ªgeneracióndelaaviación/Portada1.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Aviones de 5ª y 4.5 generación</title>
   <meta charset="UTF-8">
@@ -15,7 +13,7 @@
     .bgimg {
       background-position: center;
       background-size: cover;
-      background-image: url("https://i.imgur.com/KxUviNV.jpeg");
+      background-image: url("military-jets-qgddamh686ip2top.jpg");
       min-height: 75%;
       filter: grayscale(20%);
     }
@@ -32,42 +30,3 @@
     }
   </style>
 </head>
-<body>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-row w3-padding w3-black">
-    <div class="w3-col s4">
-      <a href="#home" class="w3-button w3-block w3-black">INICIO</a>
-    </div>
-    <div class="w3-col s4">
-      <a href="#generacion5" class="w3-button w3-block w3-black">Generación 5</a>
-    </div>
-    <div class="w3-col s4">
-      <a href="#generacion45" class="w3-button w3-block w3-black">Generación 4.5</a>
-    </div>
-  </div>
-</div>
-
-<!-- Header con imagen -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:70px; font-weight:bold;">Aviones de<br>5ª y 4.5 Generación</span>
-  </div>
-  <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white" style="font-size:18px;">Tecnología avanzada y supremacía aérea</span>
-  </div>
-</header>
-
-<!-- Contenido principal -->
-<div class="w3-sand w3-grayscale w3-large w3-padding-64">
-  <!-- Aquí sigue el contenido que ya tenías sobre los cazas, sin modificaciones -->
-</div>
-
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-</body>
-</html>
